--- a/templates/secrets/db-password.yaml
+++ b/templates/secrets/db-password.yaml
@@ -11,8 +11,10 @@ metadata:
   annotations:
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "1"
+    {{- if .Values.commonAnnotations }}
+    {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+    {{- end }}
 type: Opaque
 stringData:
   {{ .Values.connections.mysqlSecretKeyPassword }}: {{ include "docspace.mysql.password" . | quote }}
-  {{ .Values.connections.mysqlSecretKeyRootPassword }}: {{ include "docspace.mysql.rootPassword" . | quote }}
 {{- end }}
