--- a/templates/applications/document-server.yaml
+++ b/templates/applications/document-server.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.docs.enabled }}
+{{- if and .Values.docs.enabled (not .Values.connections.documentServerUrlExternal) }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -9,6 +9,10 @@ metadata:
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
+  {{- if or .Values.commonAnnotations .Values.docs.annotations }}
+  {{- $dictValue := default .Values.commonAnnotations .Values.docs.annotations }}
+  annotations: {{- include "docspace.annotations" ( dict "keyName" $dictValue "context" $ ) | nindent 4 }}
+  {{- end }}
 spec:
   replicas: 1
   selector:
@@ -19,9 +23,8 @@ spec:
       {{- end }}
   serviceName: document-server
   {{- if .Values.docs.updateStrategy }}
-  updateStrategy: {{- toYaml .Values.docs.updateStrategy | nindent 4 }}
+  updateStrategy: {{- include "docspace.update.strategyType" .Values.docs.updateStrategy }}
   {{- end }}
-  podManagementPolicy: OrderedReady
   template:
     metadata:
       labels:
@@ -29,19 +32,20 @@ spec:
         {{- if .Values.commonLabels }}
         {{- include "docspace.labels.commonLabels" . | trim | nindent 8 }}
         {{- end }}
-      {{- if .Values.podAnnotations }}
-      annotations:
-        {{- range $key, $value := .Values.podAnnotations }}
-        {{ $key }}: {{ tpl $value $ }}
-        {{- end }}
+      {{- if .Values.docs.podAnnotations }}
+      annotations: {{- include "docspace.annotations" ( dict "keyName" .Values.docs.podAnnotations "context" $ ) | nindent 8 }}
       {{- end }}
     spec:
       serviceAccountName: {{ include "docspace.serviceAccountName" . }}
       {{- if .Values.docs.podSecurityContext.enabled }}
-      securityContext: {{- omit .Values.docs.podSecurityContext "enabled" | toYaml | nindent 8 }}
+      securityContext: {{- include "docspace.securityContext" .Values.docs.podSecurityContext | nindent 8 }}
       {{- end }}
-      {{- if or .Values.docs.podAffinity .Values.docs.nodeAffinity }}
+      {{- if or .Values.docs.customPodAntiAffinity .Values.docs.podAffinity .Values.docs.nodeAffinity }}
       affinity:
+        {{- with .Values.docs.customPodAntiAffinity }}
+        podAntiAffinity:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
         {{- with .Values.docs.podAffinity }}
         podAffinity:
           {{- toYaml . | nindent 10 }}
@@ -51,22 +55,29 @@ spec:
           {{- toYaml . | nindent 10 }}
         {{- end }}
       {{- end }}
-      {{- if .Values.nodeSelector }}
-      nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
+      {{- if or .Values.nodeSelector .Values.docs.nodeSelector }}
+      nodeSelector: {{ toYaml (default .Values.nodeSelector .Values.docs.nodeSelector) | nindent 8 }}
       {{- end }}
-      {{- if .Values.tolerations }}
-      tolerations: {{ toYaml .Values.tolerations | nindent 8 }}
+      {{- if or .Values.tolerations .Values.docs.tolerations }}
+      tolerations: {{ toYaml (default .Values.tolerations .Values.docs.tolerations) | nindent 8 }}
       {{- end }}
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
       - name: {{ .Values.imagePullSecrets }}
       {{- end }}
+      {{- with .Values.docs.initContainers }}
+      initContainers:
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
       containers:
       - name: document-server
         image: {{ .Values.docs.image.repository }}:{{ .Values.docs.image.tag }}
         imagePullPolicy: {{ .Values.docs.image.pullPolicy }}
-        {{- if .Values.containerSecurityContext.enabled }}
-        securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.docs.containerSecurityContext.enabled }}
+        securityContext: {{- include "docspace.securityContext" .Values.docs.containerSecurityContext | nindent 10 }}
+        {{- end }}
+        {{- if .Values.docs.lifecycleHooks }}
+        lifecycle: {{- toYaml .Values.docs.lifecycleHooks | nindent 10 }}
         {{- end }}
         ports:
         - containerPort: {{ .Values.docs.containerPorts.http }}
@@ -94,7 +105,7 @@ spec:
             name: {{ template "docspace.jwt.secretName" . }}
         volumeMounts:
         - name: docspace-data
-          mountPath: /var/www/onlyoffice/Data
+          mountPath: /var/www/{{ .Values.product.name }}/Data
       volumes:
       - name: docspace-data
         persistentVolumeClaim:
