--- a/templates/services/doceditor.yaml
+++ b/templates/services/doceditor.yaml
@@ -8,6 +8,9 @@ metadata:
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+  {{- end }}
 spec:
   ports:
   - port: {{ .Values.doceditor.containerPorts.app }}
@@ -17,5 +20,8 @@ spec:
     name: doceditor
     targetPort: {{ .Values.doceditor.containerPorts.doceditor }}
   selector:
-    statefulset.kubernetes.io/pod-name: doceditor-0
+    app: doceditor
+    {{- if .Values.commonLabels }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+    {{- end }}
   type: ClusterIP
