--- a/templates/services/socket.yaml
+++ b/templates/services/socket.yaml
@@ -8,6 +8,9 @@ metadata:
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+  {{- end }}
 spec:
   ports:
   - port: {{ .Values.socket.containerPorts.app }}
@@ -17,5 +20,8 @@ spec:
     name: socket
     targetPort: {{ .Values.socket.containerPorts.socket }}
   selector:
-    statefulset.kubernetes.io/pod-name: socket-0
+    app: socket
+    {{- if .Values.commonLabels }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+    {{- end }}
   type: ClusterIP
